Bug 629618 - Correct Ogg seek bisection's backoff and termination. r=doublec a=roc